Cambiamos el archivo de manifest
Cambiamos el nombre que crear react por defecto por el nombre de nuestra aplicacion

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Generador de Hamburguesas",
+  "name": "Generador de Hamburguesas",
   "icons": [
     {
       "src": "favicon.ico",
